# cook_membrane_new

./: CMakeLists.txt  README.md  cook_membrane.cc  parameters.prm
gcmma/: CMakeLists.txt  GCMMASolver.h
mma/: CMakeLists.txt  MMASolver.cpp  MMASolver.h
